--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>Informational Advertorial | Sponsored</title>
-  <meta name="description" content="An informational sponsored advertorial providing general background on a plant-based ingredient." />
+  <title>Advertisement | Sponsored Advertorial</title>
+  <meta name="description" content="Paid advertisement (sponsored advertorial) providing general, non-medical background information." />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Informational Advertorial | Sponsored" />
-  <meta property="og:description" content="An informational sponsored advertorial providing general background on a plant-based ingredient." />
+  <!-- Open Graph (ABSOLUTE URLS) -->
+  <meta property="og:title" content="Advertisement | Sponsored Advertorial" />
+  <meta property="og:description" content="Paid advertisement (sponsored advertorial) providing general, non-medical background information." />
   <meta property="og:image" content="https://cuticarashop.github.io/pressel-plant-us-/assets/plant-based-hero.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://cuticarashop.github.io/pressel-plant-us-/assets/plant-based-hero.jpg" />
 
   <style>
     :root{
@@ -22,6 +23,8 @@
       --shadow:0 8px 20px rgba(0,0,0,.10);
       --soft:#f7f7f7;
       --border:#e9e9e9;
+      --maxw:980px;
+      --content:780px;
     }
 
     *{box-sizing:border-box;margin:0;padding:0}
@@ -33,7 +36,7 @@
       line-height:1.6;
     }
 
-    /* Compliance */
+    /* Compliance bars */
     .topbar{
       background:#f4f4f4;
       padding:10px 12px;
@@ -55,17 +58,19 @@
     }
 
     .wrap{
-      max-width:980px;
+      max-width:var(--maxw);
       margin:0 auto;
       padding:18px 15px 28px;
     }
 
     .content{
-      max-width:780px;
+      max-width:var(--content);
       margin:0 auto;
     }
 
+    /* Strong disclosure block (Revcontent-friendly) */
     .disclosure{
+      max-width:var(--content);
       margin:12px auto 18px;
       padding:12px 14px;
       background:var(--soft);
@@ -73,58 +78,70 @@
       text-align:center;
       font-size:14px;
     }
+    .disclosure b{display:inline-block;margin-right:4px;}
+    .disclosure .hardline{
+      margin-top:6px;
+      font-size:12px;
+      color:var(--muted);
+    }
 
-    /* HERO FIXADO (aqui estava o brete) */
+    /* HERO */
     .hero{
-      margin:18px 0;
-      text-align:center;
+      max-width:var(--content);
+      margin:0 auto 14px;
+      border-radius:12px;
+      overflow:hidden;
+      box-shadow:var(--shadow);
+      border:1px solid var(--border);
+      background:#fff;
     }
     .hero img{
-      display:block;
       width:100%;
-      max-width:780px;
       height:auto;
-      margin:0 auto;
-      border-radius:14px;
-      box-shadow:var(--shadow);
+      display:block;
     }
 
     .publisher{
-      margin:14px 0 6px;
-      font-size:14px;
+      margin-top:6px;
+      font-size:12px;
       color:var(--muted);
+      text-align:left;
     }
 
     h1{
+      margin-top:8px;
       font-size:34px;
       line-height:1.15;
-      margin-bottom:12px;
     }
 
     .subtitle{
+      margin-top:10px;
       color:var(--muted);
-      margin-bottom:14px;
+      font-size:15px;
     }
+
+    p{margin-top:10px;}
 
     .info{
-      margin:16px 0;
-      padding:14px;
+      margin-top:16px;
       border:1px solid var(--border);
-      border-radius:14px;
+      border-radius:10px;
+      padding:14px;
       background:#fff;
     }
-
     .info h2{
-      font-size:18px;
+      font-size:16px;
       margin-bottom:8px;
     }
-
     .info ul{
-      padding-left:18px;
+      margin-left:18px;
+    }
+    .info li{
+      margin:4px 0;
     }
 
     .cta{
-      margin:22px 0;
+      margin:18px 0 8px;
       text-align:center;
     }
 
@@ -132,14 +149,17 @@
       display:inline-block;
       background:var(--btn);
       color:#fff;
-      padding:14px 30px;
+      padding:12px 26px;
       border-radius:999px;
-      font-weight:700;
       text-decoration:none;
+      font-weight:700;
       box-shadow:var(--shadow);
-      transition:.15s ease;
+      transition:transform .10s ease, background .15s ease;
     }
-    .cta a:hover{background:var(--btn-hover)}
+    .cta a:hover{
+      background:var(--btn-hover);
+      transform:translateY(-1px);
+    }
 
     .cta-note,
     .cta-disclosure{
@@ -166,10 +186,12 @@
       text-align:center;
     }
     .footer a{color:var(--btn);text-decoration:none;}
+    .footer a:hover{text-decoration:underline;}
 
     @media (max-width:768px){
       h1{font-size:26px}
       .subtitle{font-size:15px}
+      .wrap{padding:14px 12px 22px}
     }
   </style>
 </head>
@@ -177,7 +199,7 @@
 <body>
 
   <div class="topbar">
-    <strong>ADVERTISEMENT</strong> • This is a sponsored advertorial. This page is for informational purposes only and is not medical advice.
+    <strong>ADVERTISEMENT</strong> • This is a paid advertisement (sponsored advertorial). For informational purposes only. Not medical advice.
   </div>
 
   <div class="sponsored">SPONSORED</div>
@@ -185,18 +207,20 @@
   <div class="wrap">
 
     <div class="disclosure">
-      <b>Disclosure:</b> This page is a paid advertisement (sponsored advertorial) created for informational purposes only.
-      It does not provide medical advice.
+      <b>Disclosure:</b> This page is a paid advertisement and sponsored advertorial created for informational purposes only. It does not provide medical advice.
+      <div class="hardline">
+        This content is advertising and is not news, editorial, or independent journalism.
+      </div>
     </div>
 
     <div class="hero">
-      <img src="assets/plant-based-hero.jpg" alt="Plant-based ingredient (illustrative image)">
+      <img src="assets/plant-based-hero.jpg" alt="Plant-based ingredient (illustrative image)" loading="eager" decoding="async">
     </div>
 
     <div class="content">
       <div class="publisher">Publisher: <b>Health Insider</b></div>
 
-      <h1>An Informational Look at a Plant-Based Ingredient</h1>
+      <h1>Sponsored Advertorial: An Informational Look at a Plant-Based Ingredient</h1>
 
       <p class="subtitle">
         This sponsored advertorial provides general background information and links to where you can learn more.
@@ -249,13 +273,16 @@
     if (!params.has("traffic_type")) params.set("traffic_type", "native");
     if (!params.has("campaign")) params.set("campaign", "berberine_us_unknown");
 
+    // Monta link final
     const HOPLINK = HOP_BASE + "?" + params.toString();
 
+    // Botão
     const cta = document.getElementById("ctaLink");
     if (cta) cta.href = HOPLINK;
   </script>
 
 </body>
 </html>
+
 
  
