--- a/index.html
+++ b/index.html
@@ -133,12 +133,8 @@
       font-size:16px;
       margin-bottom:8px;
     }
-    .info ul{
-      margin-left:18px;
-    }
-    .info li{
-      margin:4px 0;
-    }
+    .info ul{ margin-left:18px; }
+    .info li{ margin:4px 0; }
 
     .cta{
       margin:18px 0 8px;
@@ -241,7 +237,7 @@
       </div>
 
       <div class="cta">
-        <a id="ctaLink" href="#" rel="nofollow noopener noreferrer">Learn More</a>
+        <a id="ctaLink" href="#" target="_blank" rel="nofollow noopener noreferrer" referrerpolicy="no-referrer">Learn More</a>
         <div class="cta-note">Individual experiences vary. Consult a qualified professional for personal guidance.</div>
         <div class="cta-disclosure">
           <b>Sponsored:</b> Clicking “Learn More” will take you to an external website.
